RESOLVED FIXED32321
ENABLE_ORIENTATION_EVENTS does not compile
https://bugs.webkit.org/show_bug.cgi?id=32321
Summary ENABLE_ORIENTATION_EVENTS does not compile
Patrick
Reported 2009-12-09 07:05:28 PST
Created attachment 44535 [details] Patch to fix build. Frame.cpp does not compile due to a change in dispatchWindowEvent. Attached is a patch to fix the build.
Attachments
Patch to fix build. (1023 bytes, patch)
2009-12-09 07:05 PST, Patrick
fishd: review-
Update changelog with bug url. (1.05 KB, patch)
2009-12-09 07:51 PST, Patrick
no flags
Darin Fisher (:fishd, Google)
Comment 1 2009-12-09 07:46:22 PST
Comment on attachment 44535 [details] Patch to fix build. > Index: WebCore/ChangeLog ... > + Fix the build with ENABLE_ORIENTATION_EVENTS > + > + * page/Frame.cpp: > + (WebCore::Frame::sendOrientationChangeEvent): the change is good, but please revise the patch to include a bug link in the ChangeLog.
Patrick
Comment 2 2009-12-09 07:51:17 PST
Created attachment 44537 [details] Update changelog with bug url.
WebKit Commit Bot
Comment 3 2009-12-09 08:35:53 PST
Comment on attachment 44537 [details] Update changelog with bug url. Rejecting patch 44537 from commit-queue. Unexpected failure when landing patch! Please file a bug against bugzilla-tool. Failed to run "['WebKitTools/Scripts/bugzilla-tool', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', '--quiet', '44537']" exit_code: 1 Last 500 characters of output: nd_handle_errors self.run() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 54, in run self.clean() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 81, in clean step.run() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/buildsteps.py", line 101, in run os.chdir(self._tool._scm.checkout_root) AttributeError: 'NoneType' object has no attribute 'checkout_root'
Patrick
Comment 4 2009-12-09 08:38:13 PST
Oops, cq failed. Can someone landed this patch manually?
Eric Seidel (no email)
Comment 5 2009-12-09 11:36:41 PST
Comment on attachment 44537 [details] Update changelog with bug url. Sorry for the noise. Adam believes to have fixed the issue. I've restarted the commit bot.
WebKit Commit Bot
Comment 6 2009-12-09 11:59:59 PST
Comment on attachment 44537 [details] Update changelog with bug url. Clearing flags on attachment: 44537 Committed r51910: <http://trac.webkit.org/changeset/51910>
WebKit Commit Bot
Comment 7 2009-12-09 12:00:04 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 8 2009-12-09 13:17:48 PST
Please be sure to leave the "Reviewed by NOBODY (OOPS!)." line in your ChangeLogs so that the scripts can correctly mark a reviewer when landing.
Note You need to log in before you can comment on or make changes to this bug.