2009-12-09  Patrick Scott  <phanna@email.unc.edu>

Fix the build with ENABLE_ORIENTATION_EVENTS
        https://bugs.webkit.org/show_bug.cgi?id=32321

        * page/Frame.cpp:
        (WebCore::Frame::sendOrientationChangeEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@51910 bbb929c8-8fbe-4397-9dbb-9b2b20218538